Main menu navbar: fixing border and vertical spacing issues

--- a/wp-content/themes/openlab/less/variables.less
+++ b/wp-content/themes/openlab/less/variables.less
@@ -80,6 +80,7 @@ Bootstrap variable overrides
 
 // Basics of a navbar
 @navbar-margin-bottom:             @line-height-computed * 2;
+@navbar-border-radius:             0;
 @navbar-default-bg:                @white;
 @navbar-default-border:            @10gray; 
 
