--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -258,6 +258,8 @@ input[type="submit"]{
 }
 /**header**/
 .navbar-default{
+    border: none;
+    border-bottom: 1px solid @10gray;
     .container{
         margin: 0 auto;
         .navbar-header{
@@ -284,6 +286,7 @@ input[type="submit"]{
                     display: block;
                     text-decoration: none;
                     font-weight: 700;
+                    line-height: 150%;
                     padding: 21px 15px;
                     &:hover,
                         &:focus {
